--- a/style.css
+++ b/style.css
@@ -6,3 +6,10 @@ main{
     background-color: rgb(251,248,239);
     padding: 10px;
 }
+input{
+    border-radius: 51px;
+    background-color: rgb(207,188,181);
+    padding: 8px;
+    border: none;
+
+}
