--- a/style.css
+++ b/style.css
@@ -18,3 +18,25 @@ main > div{
     text-align: center;
 
 }
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
+  
+  .navbar ul {
+    display: flex;
+    list-style: none;
+    width: 100%;
+  }
+  
+  .navbar li {
+    flex-grow: 1;
+    text-align: center;
+  }
+  
+  .navbar li a {
+    display: block;
+    padding: 10px;
+    text-decoration: none;
+  }
