--- a/style.css
+++ b/style.css
@@ -62,3 +62,8 @@ main > div{
   h1{
     font-family:Verdana, Geneva, Tahoma, sans-serif;
   }
+  header{
+    text-align: center;
+    color: rgb(255, 211, 80);
+  }
+  
